@@ -136,7 +136,7 @@
         <!-- the key is the HAL zone, Display name is the flash icon name -->
 
         !-- ______________________________________  DynaLite DEFS  ____________________  -->
-        <DEVICE ACTIVE="Y" DEVICE_TYPE="DYNALITE" DESCRIPTION="DynaLite Lights">
+        <DEVICE ACTIVE="N" DEVICE_TYPE="DYNALITE" DESCRIPTION="DynaLite Lights">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N"  FLOW="NONE"/>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N" FLOW="NONE" />
@@ -168,7 +168,7 @@
         </DEVICE>
 
         !-- ______________________________________  CBUS DEFS  ____________________  -->
-        <DEVICE ACTIVE="N" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
+        <DEVICE ACTIVE="Y" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE"/>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N" FLOW="RTSCTS" />
@@ -340,7 +340,8 @@
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="RTSCTS"/>
                         <IP ACTIVE="N" IP_ADDRESS="192.168.1.5" PORT="1001"/>
                         <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="4999"/>
-                        <IP ACTIVE="Y" IP_ADDRESS="127.0.0.1" PORT="5002"/>
+                        <IP ACTIVE="N" IP_ADDRESS="127.0.0.1" PORT="5002"/>
+                        <IP ACTIVE="Y" IP_ADDRESS="172.16.3.105" PORT="1001"/>
                 </CONNECTION>
                 <CATALOGUE NAME="DOOR_IDS">
                         <ITEM CODE="31" VALUE="Main door"/>
@@ -461,7 +462,7 @@
         <!-- _____________________________ GC-100 DEFS _____________________________-->
         <DEVICE ACTIVE="N" DEVICE_TYPE="GC100" DESCRIPTION="GC100" >
                 <CONNECTION>
-                        <IP ACTIVE="Y" IP_ADDRESS="192.168.1.70" PORT="4998"/>
+                        <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="4998"/>
                         <IP ACTIVE="N" IP_ADDRESS="127.0.0.1" PORT="5001"/>
                 </CONNECTION>
                 <PARAMETERS>                
@@ -501,7 +502,8 @@
         <DEVICE ACTIVE="N" DEVICE_TYPE="GC100" DESCRIPTION="GC100">
                 <CONNECTION>
                         <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="4998"/>
-                        <IP ACTIVE="Y" IP_ADDRESS="127.0.0.1" PORT="5005"/>
+                        <IP ACTIVE="N" IP_ADDRESS="127.0.0.1" PORT="5005"/>
+                        <IP ACTIVE="Y" IP_ADDRESS="172.16.3.215" PORT="4998"/>
                 </CONNECTION>
                 <PARAMETERS>                
                 </PARAMETERS>
